# TauRPC

./: CHANGELOG.md  README.md  package-lock.json  package.json  pnpm-lock.yaml
.changeset/: angry-apples-worry.md
example/: package.json  pnpm-lock.yaml
example/src-tauri/: Cargo.toml
example/src-tauri/src/: main.rs
example/src/lib/: bindings.ts
taurpc/: Cargo.toml
taurpc/src/: export.rs  lib.rs
taurpc/taurpc-macros/: Cargo.toml
taurpc/taurpc-macros/src/: generator.rs  lib.rs  proc.rs
taurpc/tests/: sync_procedures.rs
