[package]
name = "taurpc"
authors = ["MatsDK"]
version = "0.5.0"
edition = "2024"
description = "A type-safe IPC layer for tauri commands"
documentation = "https://docs.rs/taurpc"
homepage = "https://github.com/MatsDK/TauRPC"
repository = "https://github.com/MatsDK/TauRPC"
license = "MIT OR Apache-2.0"
readme = "../README.md"
categories = []

[package.metadata."docs.rs"]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
taurpc-macros = { path = "./taurpc-macros", version = "=0.5.0" }

itertools = "0.14.0"
tauri = { version = "2.5.1", features = ["specta"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
tokio = { version = "1.45.1", features = ["full"] }

specta = { version = "=2.0.0-rc.22", features = ["export", "function"] }
specta-serde = { version = "0.0.9", features = [] }
specta-typescript = { version = "0.0.9", features = ["function"] }
specta-macros = { version = "2.0.0-rc.18" }
heck = "0.5.0"
anyhow = "1.0.98"

[workspace]
members = ["taurpc-macros"]
